Fixing the shitty tests to use the repo that is distributed with the sdk AMPS-137
git-svn-id: https://studio.atlassian.com/svn/AMPS/trunk@44807 2c54a935-e501-0410-bc05-97a93f6bca70