@@ -92,8 +92,43 @@
                     <configuration>
                         <offline>false</offline>
                         <itDirectory>${project.build.directory}/it</itDirectory>
-                        <jvmArgs>-Xmx128m</jvmArgs>
+                        <jvmArgs>-Xmx128m -XX:MaxPermSize=256m</jvmArgs>
                         <!--<jvmArgs>-Xmx128m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006</jvmArgs>-->
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>com.atlassian.maven.plugins</groupId>
+                    <artifactId>maven-repository-bundle-plugin</artifactId>
+                    <version>0.1</version>
+                    <configuration>
+                        <artifacts>
+                            <!-- the plugins  -->
+                            <artifact>com.atlassian.maven.plugins:maven-amps-plugin:${project.version}</artifact>
+                            <artifact>com.atlassian.maven.plugins:maven-amps-dispatcher-plugin:${project.version}</artifact>
+                            <artifact>com.atlassian.maven.plugins:maven-refapp-plugin:${project.version}</artifact>
+                            <artifact>com.atlassian.maven.plugins:maven-confluence-plugin:${project.version}</artifact>
+                            <artifact>com.atlassian.maven.plugins:maven-jira-plugin:${project.version}</artifact>
+                            <artifact>com.atlassian.maven.plugins:maven-bamboo-plugin:${project.version}</artifact>
+                            <artifact>com.atlassian.maven.plugins:maven-fecru-plugin:${project.version}</artifact>
+                            <artifact>com.atlassian.maven.plugins:maven-crowd-plugin:${project.version}</artifact>
+
+                            <!-- the archetypes -->
+                            <artifact>com.atlassian.maven.archetypes:refapp-plugin-archetype:${project.version}</artifact>
+                            <artifact>com.atlassian.maven.archetypes:confluence-plugin-archetype:${project.version}</artifact>
+                            <artifact>com.atlassian.maven.archetypes:jira-plugin-archetype:${project.version}</artifact>
+                            <artifact>com.atlassian.maven.archetypes:bamboo-plugin-archetype:${project.version}</artifact>
+                            <artifact>com.atlassian.maven.archetypes:fecru-plugin-archetype:${project.version}</artifact>
+                            <artifact>com.atlassian.maven.archetypes:crowd-plugin-archetype:${project.version}</artifact>
+
+                            <!-- restricted artifacts -->
+                            <artifact>javax.servlet:servlet-api:2.3</artifact>
+                            <artifact>javax.mail:mail:1.4</artifact>
+                            <artifact>javax.mail:mail:1.3.3</artifact>
+                            <artifact>javax.transaction:jta:1.0.1b</artifact>
+                            <artifact>javax.transaction:jta:1.0.1B</artifact>
+                            <artifact>jta:jta:1.0.1B</artifact>
+                            <artifact>javax.jms:jms:1.1</artifact>
+                        </artifacts>
                     </configuration>
                 </plugin>
             </plugins>
